refactor: giant refactoring

--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,7 @@ MAX_CONTEXT_CHARS=6000
 LLM_BASE_URL=https://api.openai.com/v1
 LLM_API_KEY=
 LLM_MODEL=gpt-4o-mini
-LLM_SYSTEM_PROMPT=Ты помощник по внутренней базе знаний. Отвечай по контексту. Если данных нет — скажи, что не нашел.
+LLM_SYSTEM_PROMPT=You are an assistant for a private internal knowledge base. You must answer questions strictly and exclusively based on the provided context. If the context does not explicitly contain the required information, state that the information is not available. Never speculate, infer, or guess beyond the given text. Prefer accuracy over completeness.
 
 # -------------------
 # Google Drive ingest
@@ -50,8 +50,8 @@ GOOGLE_MAX_ROWS_PER_SHEET=2000
 
 # retry/backoff
 GOOGLE_BACKOFF_RETRIES=8
-GOOGLE_BACKOFF_BASE_DELAY=1.0
-GOOGLE_BACKOFF_MAX_DELAY=30.0
+GOOGLE_BACKOFF_BASE_DELAY_SECONDS=1.0
+GOOGLE_BACKOFF_MAX_DELAY_SECONDS=30.0
 
 # -------------------
 # Google API rate limit (token bucket)
@@ -61,7 +61,7 @@ GOOGLE_API_RPS=8
 GOOGLE_API_BURST=16
 
 # progress logging
-INGEST_PROGRESS_EVERY=25
+INGEST_PROGRESS_FILES=25
 INGEST_PROGRESS_SECONDS=30
 
 # graceful shutdown
@@ -71,6 +71,7 @@ INGEST_SHUTDOWN_GRACE_SECONDS=20
 # Logging / Health
 # -------------------
 LOG_LEVEL=INFO
+LOG_PLAIN_TEXT=false
 HEALTH_HOST=localhost
 BOT_HEALTH_PORT=8080
 INGEST_HEALTH_PORT=8081
