--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.13"
 readme = "README.md"
 
 dependencies = [
+  "structlog>=25.5.0",
   "qdrant-client>=1.16.2",
   "fastembed>=0.7.4",
   "python-telegram-bot>=22.6",
