feat: access control

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # -------------------
 TELEGRAM_BOT_TOKEN=put-your-token-here
 
+# Access control (optional)
+# If empty - bot is publicly accessible
+TELEGRAM_ALLOWED_USER_IDS=[123456789,987654321]
+TELEGRAM_ALLOWED_GROUP_IDS=[-1001234567890,-1009876543210]
+
 # -------------------
 # Qdrant
 # -------------------
