--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-python@v6
-      - uses: pre-commit/action@v3.0.1
+      - uses: j178/prek-action@v1
         with:
           extra_args: --all-files --hook-stage pre-commit
 
