--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,15 +13,15 @@ dependencies = [
   "pydantic>=2.12.5",
   "pydantic-settings>=2.12.0",
   "openai>=2.16.0",
-  "google-api-python-client>=2.188.0",
+  "google-api-python-client>=2.189.0",
   "google-auth>=2.48.0",
   "google-auth-httplib2>=0.3.0",
 ]
 
 [dependency-groups]
 dev = [
-    "pre-commit>=4.5.1",
-    "ruff>=0.14.14",
+    "prek>=0.3.1",
+    "ruff>=0.15.0",
 ]
 
 [tool.uv]
