--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,38 @@
 # -------------------
 # Telegram
 # -------------------
-TELEGRAM_BOT_TOKEN=put-your-token-here
+TELEGRAM_BOT_TOKEN=example
 
 # Access control (optional)
 # If empty - bot is publicly accessible
-TELEGRAM_ALLOWED_USER_IDS=[123456789,987654321]
-TELEGRAM_ALLOWED_GROUP_IDS=[-1001234567890,-1009876543210]
+TELEGRAM_ALLOWED_USER_IDS=[1,2]
+TELEGRAM_ALLOWED_GROUP_IDS=[-1,-2]
+
+# -------------------
+# Storage backend
+# -------------------
+STORAGE_BACKEND=google_drive
+
+# -------------------
+# Google Drive storage
+# Either set STORAGE_GOOGLE_DRIVE_FOLDER_IDS or STORAGE_GOOGLE_DRIVE_ALL_ACCESSIBLE=true
+# -------------------
+STORAGE_GOOGLE_DRIVE_SERVICE_ACCOUNT_JSON=/run/secrets/google_sa
+STORAGE_GOOGLE_DRIVE_FOLDER_IDS=["example1","example2"]
+STORAGE_GOOGLE_DRIVE_ALL_ACCESSIBLE=false
+
+# -------------------
+# Google Drive limits / backoff
+# -------------------
+STORAGE_GOOGLE_DRIVE_MAX_ROWS_PER_SHEET=10000
+STORAGE_GOOGLE_DRIVE_BACKOFF_RETRIES=8
+STORAGE_GOOGLE_DRIVE_BACKOFF_BASE_DELAY_SECONDS=1.0
+STORAGE_GOOGLE_DRIVE_BACKOFF_MAX_DELAY_SECONDS=30.0
+
+# Google API rate limit (token bucket)
+# Tune for your account/project limits
+STORAGE_GOOGLE_DRIVE_API_RPS=8
+STORAGE_GOOGLE_DRIVE_API_BURST=16
 
 # -------------------
 # Qdrant
@@ -18,7 +44,9 @@ QDRANT_COLLECTION=docs
 # Embeddings
 # -------------------
 EMBED_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
-HF_TOKEN=put-your-token-here
+
+# Optional: token for downloading HuggingFace-hosted models.
+HF_TOKEN=example
 
 # -------------------
 # RAG
@@ -31,39 +59,19 @@ MAX_CONTEXT_CHARS=6000
 # If LLM_API_KEY is empty -> LLM disabled (bot returns only fragments)
 # -------------------
 LLM_BASE_URL=https://api.openai.com/v1
-LLM_API_KEY=
+LLM_API_KEY=example
 LLM_MODEL=gpt-4o-mini
 LLM_SYSTEM_PROMPT=You are an assistant for a private internal knowledge base. You must answer questions strictly and exclusively based on the provided context. If the context does not explicitly contain the required information, state that the information is not available. Never speculate, infer, or guess beyond the given text. Prefer accuracy over completeness.
 
 # -------------------
-# Google Drive ingest
-# Either set GOOGLE_DRIVE_FOLDER_IDS or ALL_ACCESSIBLE=true
+# Ingest
 # -------------------
-GOOGLE_SERVICE_ACCOUNT_JSON=/run/secrets/google_sa
-GOOGLE_DRIVE_FOLDER_IDS=["example1","example2"]
-ALL_ACCESSIBLE=false
-
 # once|loop
 INGEST_MODE=loop
 INGEST_POLL_SECONDS=600
 
 # parallelism
 INGEST_WORKERS=6
-
-# sheets limits
-GOOGLE_MAX_ROWS_PER_SHEET=2000
-
-# retry/backoff
-GOOGLE_BACKOFF_RETRIES=8
-GOOGLE_BACKOFF_BASE_DELAY_SECONDS=1.0
-GOOGLE_BACKOFF_MAX_DELAY_SECONDS=30.0
-
-# -------------------
-# Google API rate limit (token bucket)
-# Tune for your account/project limits
-# -------------------
-GOOGLE_API_RPS=8
-GOOGLE_API_BURST=16
 
 # progress logging
 INGEST_PROGRESS_FILES=25
@@ -73,10 +81,14 @@ INGEST_PROGRESS_SECONDS=30
 INGEST_SHUTDOWN_GRACE_SECONDS=20
 
 # -------------------
-# Logging / Health
+# Health
 # -------------------
-LOG_LEVEL=INFO
-LOG_PLAIN_TEXT=false
 HEALTH_HOST=localhost
 BOT_HEALTH_PORT=8080
 INGEST_HEALTH_PORT=8081
+
+# -------------------
+# Logging
+# -------------------
+LOG_LEVEL=INFO
+LOG_PLAIN_TEXT=false
