--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,3 +57,12 @@ repos:
       - id: bandit
         stages: [pre-commit]
         args: [-ll]
+  - repo: local
+    hooks:
+      - id: test
+        name: test
+        entry: make test
+        language: system
+        always_run: true
+        pass_filenames: false
+        stages: [pre-commit]
