--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,12 @@ jobs:
       - uses: actions/checkout@v6
       - uses: astral-sh/setup-uv@v7
       - run: make install_deps
+      - uses: actions/cache@v5
+        with:
+          path: ~/.cache/prek
+          key: prek|${{ runner.os }}|${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            prek|${{ runner.os }}|
       - uses: j178/prek-action@v1
         with:
           extra_args: --all-files --hook-stage pre-commit
