feat(ingest): add all planned file types

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,33 @@ STORAGE_GOOGLE_DRIVE_API_RPS=8
 STORAGE_GOOGLE_DRIVE_API_BURST=16
 
 # -------------------
+# File type feature toggles
+# All true by default
+# -------------------
+FILE_TYPE_GDOCS_ENABLED=true
+FILE_TYPE_GSHEETS_ENABLED=true
+FILE_TYPE_GSLIDES_ENABLED=true
+FILE_TYPE_TEXT_BASED_ENABLED=true
+FILE_TYPE_PDF_ENABLED=true
+FILE_TYPE_DOCX_ENABLED=true
+FILE_TYPE_DOC_ENABLED=true
+FILE_TYPE_XLSX_ENABLED=true
+FILE_TYPE_XLS_ENABLED=true
+FILE_TYPE_PPTX_ENABLED=true
+FILE_TYPE_PPT_ENABLED=true
+
+# -------------------
+# Extractor limits
+# -------------------
+TEXT_MAX_FILE_SIZE_MB=10
+PDF_MAX_PAGES=100
+PDF_MAX_FILE_SIZE_MB=50
+# pypdf|pdfplumber (both engines are installed; choose preferred one)
+PDF_EXTRACTION_ENGINE=pypdf
+OFFICE_MAX_FILE_SIZE_MB=50
+EXCEL_MAX_SHEETS=50
+
+# -------------------
 # Qdrant
 # -------------------
 QDRANT_URL=http://qdrant:6333
