--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -72,3 +72,10 @@ repos:
         always_run: true
         pass_filenames: false
         stages: [pre-commit]
+      - id: check-types
+        name: check types
+        entry: make check_types
+        language: system
+        always_run: true
+        pass_filenames: false
+        stages: [pre-commit]
