--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ readme = "README.md"
 
 dependencies = [
   "fastembed>=0.7.4",
-  "google-api-python-client>=2.189.0",
+  "google-api-python-client>=2.190.0",
   "google-auth-httplib2>=0.3.0",
   "google-auth>=2.48.0",
-  "openai>=2.17.0",
+  "openai>=2.21.0",
   "openpyxl>=3.1.5",
   "pdfplumber>=0.11.9",
-  "pydantic-settings>=2.12.0",
+  "pydantic-settings>=2.13.0",
   "pydantic>=2.12.5",
-  "pypdf>=6.6.2",
+  "pypdf>=6.7.0",
   "python-docx>=1.2.0",
   "python-pptx>=1.0.2",
   "python-telegram-bot>=22.6",
@@ -26,14 +26,14 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-  "prek>=0.3.2",
+  "prek>=0.3.3",
   "pysentry-rs>=0.4.1",
   "pytest-cov>=7.0.0",
   "pytest-xdist>=3.8.0",
   "pytest>=9.0.2",
-  "ruff>=0.15.0",
+  "ruff>=0.15.1",
   "testcontainers[qdrant]>=4.14.1",
-  "ty>=0.0.15",
+  "ty>=0.0.17",
 ]
 
 [tool.uv]
@@ -62,3 +62,10 @@ split-on-trailing-comma = false
 quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = true
+
+[tool.pysentry.defaults]
+sources = "pypa,pypi,osv"
+fail_on = "low"
+
+[tool.pysentry.ignore]
+ids = ["GHSA-cfh3-3jmp-rvhc"]
