--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
     hooks:
       - id: pysentry
         stages: [pre-commit]
-        args: ["--sources", "pypa,pypi,osv", "--fail-on", "low", "."]
+        args: ["."]
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
